[package]
name = "moon_args"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Command line argument parsing and formatting."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false

[dependencies]
miette = { workspace = true }
shell-words = "1.1.0"
thiserror = { workspace = true }

[lints]
workspace = true
