[package]
name = "moon_bench_utils"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Benchmark utilities."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false

[dependencies]
miette = { workspace = true }
starbase_sandbox = { workspace = true }

[lints]
workspace = true
