[package]
name = "moon_blob"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Binary large objects."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false

[dependencies]
moon_common = { path = "../common" }
moon_hash = { path = "../hash" }
bytes = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }
starbase_utils = { workspace = true }

[lints]
workspace = true
