[package]
name = "moon_cache_item"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Cache item utilities."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false

[dependencies]
moon_env_var = { path = "../env-var" }
miette = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true, features = ["json"] }
tracing = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
starbase_sandbox = { workspace = true }

[lints]
workspace = true
