[package]
name = "moon_cache_remote"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Remote cache storage."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false

[dependencies]
moon_blob = { path = "../blob" }
moon_cache_storage = { path = "../cache-storage" }
moon_cas = { path = "../cas" }
moon_common = { path = "../common" }
moon_config = { path = "../config" }
moon_env_var = { path = "../env-var" }
moon_hash = { path = "../hash" }
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
async-trait = { workspace = true }
bazel-remote-apis = { workspace = true }
miette = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "json", "zstd"] }
rustc-hash = { workspace = true }
serde_json = { workspace = true }
starbase_utils = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "io-util"] }
tokio-util = { workspace = true, features = ["io"] }
tracing = { workspace = true }
uuid = { workspace = true }
zstd = "0.13.3"

# gRPC
async-stream = { workspace = true }
http = "1.4.2"
tonic = { workspace = true, features = [
	"channel",
	"codegen",
	"gzip",
	"tls-aws-lc",
	"tls-native-roots",
] }
tower = { workspace = true, features = ["retry", "timeout"] }

[dev-dependencies]
httpmock = { workspace = true }
starbase_sandbox = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tonic = { workspace = true, features = ["router", "server"] }

[lints]
workspace = true
