[package]
name = "moon_cache_storage"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Cache storage/backend utilities."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false

[dependencies]
moon_blob = { path = "../blob" }
moon_common = { path = "../common" }
moon_config = { path = "../config" }
moon_hash = { path = "../hash" }
moon_process = { path = "../process" }
async-trait = { workspace = true }
bazel-remote-apis = { workspace = true }
miette = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true, features = ["json"] }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
starbase_sandbox = { workspace = true }

[lints]
workspace = true
