[package]
name = "moon_cache"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Caching engine."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false

[[bench]]
name = "hash_files"
harness = false

[dependencies]
moon_cache_item = { path = "../cache-item" }
moon_cache_storage = { path = "../cache-storage" }
moon_cas = { path = "../cas" }
moon_common = { path = "../common" }
moon_config = { path = "../config" }
moon_env_var = { path = "../env-var" }
moon_hash = { path = "../hash" }
moon_target = { path = "../target" }
moon_time = { path = "../time" }
blake3 = { workspace = true }
miette = { workspace = true }
serde = { workspace = true }
starbase_utils = { workspace = true, features = ["fs-lock", "json"] }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
moon_bench_utils = { path = "../bench-utils" }
moon_vcs = { path = "../vcs" }
criterion = { workspace = true }
starbase_sandbox = { workspace = true }

[lints]
workspace = true
