[package]
name = "moon_cli"
version = "1.35.0"
edition = "2024"
publish = false

[[bin]]
name = "moon"
path = "src/main.rs"

[dependencies]
moon_app = { path = "../app" }
moon_common = { path = "../common" }
moon_env_var = { path = "../env-var" }
clap = { workspace = true }
mimalloc = { version = "0.1.46", default-features = false }
sigpipe = "0.1.3"
starbase = { workspace = true, features = ["log-compat"] }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# https://github.com/purpleprotocol/mimalloc_rust/issues/133
# libmimalloc-sys = { version = "=0.1.40" }

# For extism/wastime (keep in sync with proto)
extism = { workspace = true }
wasmtime = "29.0.1"
wasi-common = "29.0.1"
wiggle = "29.0.1"

[dev-dependencies]
moon_cache = { path = "../cache" }
moon_codegen = { path = "../codegen" }
moon_config = { path = "../config" }
moon_task = { path = "../task" }
moon_task_runner = { path = "../task-runner" }
moon_test_utils = { path = "../../legacy/core/test-utils" }
moon_test_utils2 = { path = "../test-utils" }
moon_vcs = { path = "../vcs" }
httpmock = "0.7.0"
proto_core = { workspace = true }
rustc-hash = { workspace = true }
serial_test = { workspace = true }
starbase_archive = { workspace = true }
starbase_sandbox = { workspace = true }

[lints]
workspace = true
