[package]
name = "moon_cli"
version = "2.2.3"
edition = "2024"
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false
default-run = "moon"

[package.metadata.dist]
dist = true

[package.metadata.release]
publish = false
pre-release-replacements = [
	{ file = "../../CHANGELOG.md", search = "Unreleased", replace = "{{version}}" },
]
tag-name = "v{{version}}"

[[bin]]
name = "moon"
path = "src/main.rs"

[[bin]]
name = "moonx"
path = "src/main_exec.rs"

[dependencies]
moon_app = { path = "../app" }
moon_common = { path = "../common" }
moon_env_var = { path = "../env-var" }
clap = { workspace = true }
mimalloc = { version = "0.1.48", default-features = false }
proto_shim = { workspace = true }
sigpipe = "0.1.3"
starbase = { workspace = true }
starbase_styles = { workspace = true }
starbase_utils = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# https://github.com/purpleprotocol/mimalloc_rust/issues/133
# libmimalloc-sys = { version = "=0.1.40" }

# For extism/wastime (keep in sync with proto)
extism = { workspace = true }
wasmtime = "~41.0.4"
wasi-common = "~41.0.4"
wiggle = "~41.0.4"

# Overrides
liblzma = { version = "0.4.6", features = ["static"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
moon_affected = { path = "../affected" }
moon_cache = { path = "../cache" }
moon_codegen = { path = "../codegen" }
moon_config = { path = "../config" }
moon_task = { path = "../task" }
moon_task_runner = { path = "../task-runner" }
moon_test_utils = { path = "../../legacy/core/test-utils" }
moon_test_utils2 = { path = "../test-utils" }
moon_vcs = { path = "../vcs" }
httpmock = "0.8.3"
proto_core = { workspace = true }
rustc-hash = { workspace = true }
serial_test = { workspace = true }
starbase_archive = { workspace = true }
starbase_sandbox = { workspace = true }

[lints]
workspace = true
