[package]
name = "moon_codegen"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Code generation, templating, and scaffolding."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false

[dependencies]
moon_common = { path = "../common" }
moon_config = { path = "../config", features = ["loader", "template"] }
moon_env = { path = "../env" }
moon_process = { path = "../process" }
moon_time = { path = "../time" }
content_inspector = "0.2.4"
convert_case = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true }
starbase_archive = { workspace = true }
starbase_utils = { workspace = true, features = [
    "editor-config",
    "glob",
    "json",
    "net",
    "yaml",
] }
tera = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
starbase_sandbox = { workspace = true }

[lints]
workspace = true
