[package]
name = "moon_config"
version = "2.0.0"
edition = "2024"
license = "MIT"
description = "Core workspace, project, and moon configuration."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = true

[package.metadata.docs.rs]
features = ["loader"]

[dependencies]
moon_common = { version = "2.0.0", path = "../common" }
moon_target = { version = "2.0.0", path = "../target" }
hcl-rs = "0.19.4"
indexmap = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
rpkl = "0.7.0"
rustc-hash = { workspace = true }
schematic = { workspace = true, features = [
	"config",
	"env",
	"extends",
	"json",
	"pkl",
	"schema",
	"toml",
	"type_indexmap",
	"type_regex",
	"type_semver",
	"validate",
	"validate_url",
	"yaml",
] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.20"
version_spec = { workspace = true, features = ["schematic"] }
warpgate_api = { workspace = true, features = ["schematic"] }

# Optional
proto_core = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
moon_config = { path = ".", features = ["proto", "tracing"] }
httpmock = "0.8.2"
serial_test = { workspace = true }
starbase_sandbox = { workspace = true }

[features]
default = []
loader = ["schematic/url"]
proto = ["loader", "tracing", "dep:proto_core"]
tracing = ["dep:tracing"]

[lints]
workspace = true
