[package]
name = "moon_config"
version = "2.0.6"
edition = "2024"
license = "MIT"
description = "Core workspace, project, and moon configuration."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = true

[package.metadata.docs.rs]
features = ["loader"]

[dependencies]
moon_common = { version = "2.0.2", path = "../common" }
moon_target = { version = "2.0.1", path = "../target" }
deserialize_untagged_verbose_error = "0.1.5"
hcl-rs = "0.19.5"
indexmap = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
rpkl = "0.7.0"
rustc-hash = { workspace = true }
schematic = { workspace = true, features = [
	"config",
	"env",
	"extends",
	"json",
	"pkl",
	"schema",
	"toml",
	"type_indexmap",
	"type_regex",
	"type_semver",
	"validate",
	"validate_url",
	"yaml",
] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = "0.1.20"
version_spec = { workspace = true, features = ["schematic"] }
warpgate_api = { workspace = true, features = ["schematic"] }

# Optional
proto_core = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
moon_config = { path = ".", features = ["proto", "tracing"] }
httpmock = "0.8.3"
serial_test = { workspace = true }
starbase_sandbox = { workspace = true }

[features]
default = []
loader = ["schematic/url"]
proto = ["loader", "tracing", "dep:proto_core"]
tracing = ["dep:tracing"]

[lints]
workspace = true
