[package]
name = "moon_config"
version = "2.0.9"
edition = "2024"
license = "MIT"
description = "Core workspace, project, and moon configuration."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = true

[dependencies]
moon_common = { version = "2.0.4", path = "../common" }
moon_target = { version = "2.1.0", path = "../target" }
deserialize_untagged_verbose_error = "0.1.5"
indexmap = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
rpkl = "0.7.0"
rustc-hash = { workspace = true }
schematic = { workspace = true, features = [
	"config",
	"env",
	"extends",
	"json",
	"pkl",
	"schema",
	"toml",
	"type_indexmap",
	"type_regex",
	"type_semver",
	"validate",
	"validate_url",
	"yaml",
] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
version_spec = { workspace = true, features = ["schematic"] }
warpgate_api = { workspace = true, features = ["schematic"] }

[dev-dependencies]
moon_config_loader = { path = "../config-loader" }
httpmock = "0.8.3"
proto_core = { workspace = true }
serial_test = { workspace = true }
starbase_sandbox = { workspace = true }

[features]
default = []

[lints]
workspace = true
