[package]
name = "moon_console"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Console reporting layer."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false

[dependencies]
moon_action = { path = "../action" }
moon_common = { path = "../common" }
moon_config = { path = "../config" }
moon_target = { path = "../target" }
inquire = "0.7.5"
miette = { workspace = true }
parking_lot = "0.12.3"
starbase_styles = { workspace = true }

[lints]
workspace = true
