[package]
name = "moon_console"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Console reporting layer."
homepage = "https://moonrepo.dev/moon"
repository = "https://github.com/moonrepo/moon"
publish = false

[dependencies]
moon_action = { path = "../action" }
moon_common = { path = "../common" }
moon_config = { path = "../config" }
moon_target = { path = "../target" }
moon_time = { path = "../time" }
miette = { workspace = true }
starbase_console = { workspace = true, features = ["ui"] }
starbase_styles = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
